--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="bower_components/backbone/backbone-min.js"></script>
     <script src="bower_components/ractive/ractive.min.js"></script>
     <script src="bower_components/ractive-backbone/dist/ractive-adaptors-backbone.min.js"></script>
+    <script src="bower_components/backbone.subroute/backbone.subroute.js"></script>
+    <script src="bower_components/backbone-async-route-filter/backbone-async-route-filter.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
     <!--APP-->
     <script src="app/js/config.js"></script>
@@ -18,7 +20,14 @@
 
     <script src="app/js/views/header.js"></script>
     <script src="app/js/views/footer.js"></script>
+
     <script src="app/js/views/accounts.js"></script>
+    <script src="app/js/views/accounts/new.js"></script>
+    <script src="app/js/views/accounts/aprove.js"></script>
+    <script src="app/js/views/accounts/get.js"></script>
+    <script src="app/js/views/accounts/resolve.js"></script>
+    <script src="app/js/views/accounts/router.js"></script>
+
     <script src="app/js/views/notifications.js"></script>
     <script src="app/js/views/responses.js"></script>
 
@@ -39,7 +48,7 @@
         </header>
         <nav>
             <ul>
-                <li><a href="#accounts">Accounts</a></li>
+                <li><a href="#accounts/new">Accounts</a></li>
                 <li><a href="#notifications">Notifications</a></li>
                 <li><a href="#responses">responses</a></li>
             </ul>
