update header and dashboard

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <script src="app/js/router.js"></script>
     <script src="app/js/app.js"></script>
     <!--styles-->
-    <link rel="stylesheet" href="bower_components/foundation/css/foundation.css"/>
+    <link rel="stylesheet" href="app/css/foundation.css"/>
     <link rel="stylesheet" href="app/css/main.css"/>
 
 
