added before and after methods in router

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <script src="app/js/views/header.js"></script>
     <script src="app/js/views/footer.js"></script>
 
+    <script src="app/js/views/auth.js"></script>
+    <script src="app/js/views/dashboard.js"></script>
     <script src="app/js/views/accounts.js"></script>
     <script src="app/js/views/accounts/new.js"></script>
     <script src="app/js/views/accounts/aprove.js"></script>
