--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="app/js/views/dashboard.js"></script>
     <script src="app/js/views/accounts.js"></script>
     <script src="app/js/views/accounts/new.js"></script>
+    <script src="app/js/views/accounts/consumer-grid.js"></script>
     <script src="app/js/views/accounts/aprove.js"></script>
     <script src="app/js/views/accounts/get.js"></script>
     <script src="app/js/views/accounts/resolve.js"></script>
