--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <title></title>
 </head>
 <body>
-    <div class="wrapper">
+    <div id="wrapper">
         <header id="header">
 
         </header>
