added d3 and charts

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="bower_components/ractive-backbone/dist/ractive-adaptors-backbone.min.js"></script>
     <script src="bower_components/backbone.subroute/backbone.subroute.js"></script>
     <script src="bower_components/backbone-async-route-filter/backbone-async-route-filter.js"></script>
+    <script src="bower_components/d3/d3.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
     <!--APP-->
     <script src="app/js/config.js"></script>
