1. сделал роутинг (пока выводится только строка константа)

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="app/js/views/accounts/new.js"></script>
     <script src="app/js/views/accounts/consumer-grid.js"></script>
     <script src="app/js/views/accounts/aprove.js"></script>
+    <script src="app/js/views/accounts/account-info.js"></script>
     <script src="app/js/views/accounts/get.js"></script>
     <script src="app/js/views/accounts/resolve.js"></script>
     <script src="app/js/views/accounts/router.js"></script>
