--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="app/js/views/footer.js"></script>
 
     <script src="app/js/views/auth.js"></script>
+    <script src="app/js/views/register.js"></script>
     <script src="app/js/views/dashboard.js"></script>
     <script src="app/js/views/accounts.js"></script>
     <script src="app/js/views/accounts/new.js"></script>
