update language and elem of interface

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <title></title>
     <!--LIBS-->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/lodash/dist/lodash.min.js"></script>
@@ -12,6 +14,9 @@
     <script src="bower_components/backbone-async-route-filter/backbone-async-route-filter.js"></script>
     <script src="bower_components/d3/d3.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
+
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <!--APP-->
     <script src="app/js/config.js"></script>
     <script src="app/js/tools.js"></script>
