--- a/index.html
+++ b/index.html
@@ -59,8 +59,23 @@
 <body>
     <div id="wrapper">
         <header id="header">
-
         </header>
+
+
+        <section id="commonInfo">
+            <div class="large-6 medium-6 small-6 columns">
+                <h3 class="page-name">
+                    Инфопанель
+                </h3>
+            </div>
+            <div class="large-6 medium-6 small-6 columns">
+                <p class="login-time" style="float: right!important;">
+                    Последний вход вчера в 12:24
+                </p>
+            </div>
+        </section>
+
+
         <section id="mainSection">
 
         </section>
