Меняю название страницы

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="app/js/views/footer.js"></script>
 
     <script src="app/js/views/auth.js"></script>
+    <script src="app/js/views/common.js"></script>
     <script src="app/js/views/register.js"></script>
     <script src="app/js/views/dashboard.js"></script>
     <script src="app/js/views/accounts.js"></script>
@@ -63,6 +64,7 @@
 
 
         <section id="commonInfo">
+            <!--
             <div class="large-6 medium-6 small-6 columns">
                 <h3 class="page-name">
                     Инфопанель
@@ -73,6 +75,7 @@
                     Последний вход вчера в 12:24
                 </p>
             </div>
+            -->
         </section>
 
 
