--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </section>
 
 
-        <section id="mainSection">
+        <section id="mainSection" class="clearfix">
 
         </section>
         <footer id="footer">
