начал делать компонент calculation

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script src="app/js/views/accounts/account-info.js"></script>
     <script src="app/js/views/accounts/get.js"></script>
     <script src="app/js/views/accounts/resolve.js"></script>
+    <script src="app/js/views/accounts/calculation.js"></script>
     <script src="app/js/views/accounts/router.js"></script>
 
     <script src="app/js/views/notifications.js"></script>
